crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__f811_annotated_assignment_redefinition.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F811 Redefinition of unused `bar` from line 4
 --> F811_34.py:5:1
  |
3 | # F811: both annotated assignments, first unused
4 | bar: int = 1
  | --- previous definition of `bar` here
5 | bar: int = 2  # F811
  | ^^^ `bar` redefined here
6 |
7 | x: str = "hello"
  |
help: Remove definition: `bar`

F811 Redefinition of unused `x` from line 7
  --> F811_34.py:8:1
   |
 5 | bar: int = 2  # F811
 6 |
 7 | x: str = "hello"
   | - previous definition of `x` here
 8 | x: str = "world"  # F811
   | ^ `x` redefined here
 9 |
10 | # OK: plain reassignment (no annotation)
   |
help: Remove definition: `x`
