crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__f821_with_builtin_added_on_new_py_version_but_old_target_version_specified.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F821 Undefined name `PythonFinalizationError`. Consider specifying `requires-python = ">= 3.13"` or `tool.nuff.target-version = "py313"` in your `pyproject.toml` file.
 --> <filename>:1:1
  |
1 | PythonFinalizationError
  | ^^^^^^^^^^^^^^^^^^^^^^^
