crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__forward-annotation-syntax-error_F722.py.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F722 Syntax error in forward annotation: Expected an expression
  --> F722.py:9:12
   |
 9 | def g() -> "///":
   |            ^^^^^
10 |     pass
   |

F722 Syntax error in forward annotation: Got unexpected token ☃
  --> F722.py:13:4
   |
13 | X: """List[int]"""'☃' = []
   |    ^^^^^^^^^^^^^^^^^^
14 |
15 | # Type annotations with triple quotes can contain newlines and indentation
   |

F722 Syntax error in forward annotation: Unexpected token at the end of an expression
  --> F722.py:30:11
   |
28 |   """
29 |
30 |   invalid1: """
   |  ___________^
31 | |         int |
32 | | str)
33 | | """
   | |___^
34 |
35 |   invalid2: """
   |

F722 Syntax error in forward annotation: Unexpected token at the end of an expression
  --> F722.py:35:11
   |
33 |   """
34 |
35 |   invalid2: """
   |  ___________^
36 | |         int) |
37 | | str
38 | | """
   | |___^
39 |   invalid3: """
40 |           ((int)
   |

F722 Syntax error in forward annotation: unexpected EOF while parsing
  --> F722.py:39:11
   |
37 |   str
38 |   """
39 |   invalid3: """
   |  ___________^
40 | |         ((int)
41 | | """
   | |___^
42 |   invalid4: """
43 |           (int
   |

F722 Syntax error in forward annotation: unexpected EOF while parsing
  --> F722.py:42:11
   |
40 |           ((int)
41 |   """
42 |   invalid4: """
   |  ___________^
43 | |         (int
44 | | """
   | |___^
