crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__forward-annotation-syntax-error_F722_1.py.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F722 Syntax error in forward annotation: Unexpected token at the end of an expression
 --> F722_1.py:8:22
  |
6 | @no_type_check
7 | class C:
8 |     def f(self, arg: "this isn't python") -> "this isn't python either":
  |                      ^^^^^^^^^^^^^^^^^^^
9 |         x: "this also isn't python" = 1
  |

F722 Syntax error in forward annotation: Unexpected token at the end of an expression
 --> F722_1.py:8:46
  |
6 | @no_type_check
7 | class C:
8 |     def f(self, arg: "this isn't python") -> "this isn't python either":
  |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^
9 |         x: "this also isn't python" = 1
  |

F722 Syntax error in forward annotation: Unexpected token at the end of an expression
 --> F722_1.py:9:12
  |
7 | class C:
8 |     def f(self, arg: "this isn't python") -> "this isn't python either":
9 |         x: "this also isn't python" = 1
  |            ^^^^^^^^^^^^^^^^^^^^^^^^
