crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__future-feature-not-defined_F407.py.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F407 Future feature `non_existent_feature` is not defined
 --> F407.py:2:24
  |
1 | from __future__ import print_function
2 | from __future__ import non_existent_feature
  |                        ^^^^^^^^^^^^^^^^^^^^
