crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__future_annotations.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F401 [*] `models.Nut` imported but unused
 --> future_annotations.py:8:5
  |
6 | from models import (
7 |     Fruit,
8 |     Nut,
  |     ^^^
9 | )
  |
help: Remove unused import: `models.Nut`
  |
7 |     Fruit,
  -     Nut,
8 | )
  |

F821 Undefined name `Bar`
  --> future_annotations.py:26:19
   |
25 |     @classmethod
26 |     def c(cls) -> Bar:
   |                   ^^^
27 |         return cls(x=0, y=0)
   |
